--- a/package.json
+++ b/package.json
@@ -3,12 +3,18 @@
   "version": "1.0.0",
   "description": "Official JavaScript/Node.js SDK for the Bazik API — MonCash & NatCash payments, transfers, and wallet management for Haiti.",
   "main": "src/index.js",
+  "module": "src/index.mjs",
   "types": "src/index.d.ts",
   "exports": {
     ".": {
-      "require": "./src/index.js",
-      "import": "./src/index.js",
-      "types": "./src/index.d.ts"
+      "import": {
+        "types": "./src/index.d.ts",
+        "default": "./src/index.mjs"
+      },
+      "require": {
+        "types": "./src/index.d.ts",
+        "default": "./src/index.js"
+      }
     }
   },
   "scripts": {
