--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bazik-sdk",
   "version": "1.0.0",
-  "description": "Official JavaScript/Node.js SDK for the Bazik API — MonCash & NatCash payments, transfers, and wallet management for Haiti.",
+  "description": "Unofficial JavaScript/Node.js SDK for the Bazik API — MonCash & NatCash payments, transfers, and wallet management for Haiti.",
   "main": "src/index.js",
   "module": "src/index.mjs",
   "types": "src/index.d.ts",
