Remove husky pre-commit and commit-msg hooks from the project, retaining only the release script in package.json.

--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "test:verbose": "node --test --test-reporter spec tests/bazik.test.js",
     "lint": "echo 'No linter configured'",
     "example": "node examples/quick-start.js",
-    "release": "release-it",
-    "prepare": "husky"
+    "release": "release-it"
   },
   "keywords": [
     "bazik",
